--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,17 @@
-/* Add CSS Styling */
+.odd {
+    /* background-color: RGB(255, 150, 150); */
+    background-color: rgb(255, 167, 167);
+    font-family: Verdana, "DejaVu Sans", sans-serif;
+}
+#unique1 {
+    color: rgb(0, 0, 255);
+    font-size: 36px;
+}
+.font-size {
+    font-size: 24px;
+}
+#unique2 {
+    background-color: rgb(144, 238, 144);
+    /* font-size: 24px; */
+    font-weight: bold;
+}
