--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,13 @@
-/* Add CSS Styling */
+.black-btn {
+    background-color: black;
+    color: white;
+}
+.yellow-btn {
+    background-color: yellow;
+}
+
+.black-btn,
+.yellow-btn {
+    font-size: 28px;
+    font-family: Helvetica, "Times New Roman", sans-serif;
+}
