--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,19 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+
+  display: flex;
+  flex-direction: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 8px;
+}
+
+.links {
+  display: flex;
+  gap: 16px;
+  margin: 0;
 }
 
 .profile-image {
@@ -45,4 +58,18 @@ a {
 
 ul {
   list-style-type: none;
+  padding: 0;
+}
+
+.left {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
+.right {
+  display: flex;
+  gap: 16px;
+  justify-content: flex-end;
+  align-items: center;
 }
