--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -4,26 +4,80 @@ body {
   min-height: 100vh;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+}
+
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+
+  font-size: 32px;
+  font-weight: 900;
+  align-content: center;
+  padding-left: 16px;
+  flex-shrink: 0;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+.inner-container {
+  display: flex;
+  flex: 1;
 }
 
 .sidebar {
-  width: 300px;
+  /* width: 300px; */
   background: royalblue;
   box-sizing: border-box;
+
+  flex: 1;
+  flex-shrink: 0;
+  flex-basis: 300px;
+  flex-grow: 0;
+}
+
+.sidebar ul {
+  padding-left: 16px;
+}
+
+.sidebar ul li {
+  font-size: 24px;
+  list-style-type: none;
+  padding-bottom: 16px;
+}
+
+.sidebar a {
+  color: white;
+  text-decoration: none;
+}
+
+.cards-container {
+  display: flex;
+  padding: 48px;
+  gap: 32px;
+  flex-wrap: wrap;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+
+  padding: 16px;
+  min-width: 300px;
+  flex-basis: 300px;
 }
